# CrediNet

./: .bumpversion.cfg  .gitignore  404.html  README.md  app.py  index.html  label_sets.json  mkdocs.yml  months.json  openapi.yaml  pull_request_template.md  pyproject.toml  run.sh  sitemap.xml
api-configuration/: index.html
baselines/: vllm_helpers.py
baselines/graph-based/: compute_all_features.sh  compute_graph_features.py  get_domains.py  train_all_baselines.sh  train_and_eval_gnn.sh  train_and_eval_lgbm.sh  train_eval.sh  train_eval_gnn.py  train_eval_lgbm.py
baselines/llm/: api_factory.py  domain_utils.py  eval_llm_predictions.py  evaluate_llm_regression.py  prompt_factory.py  query_llm.py  vllm_helpers.py
client/: README.md
credigraph/: README.md  __init__.py  client.py
credigraph/test/: test_API.py
credigraph/utils/: __init__.py  domain_handler.py  string_handler.py
data/: domain_pc1.csv
docs/: api-configuration.md  domain-query.md  index.md  leaderboard.md  versions.md
docs/stylesheets/: custom.css
domain-query/: index.html
exps/: experiments.py  label_eval.py  run.sh
leaderboard/: index.html
scores/labels/classification/processed/: legit-phish.csv  misinfo-domains.csv  nelez.csv  phish-dataset.csv  url-phish.csv  wikipedia.csv
scores/labels/dqr/: domain_pc1.csv
scripts/: app.py  compute_graph_stats.py
search/: search_index.json
stats/: analyze_veracity.py  visio_labels.py
stylesheets/: custom.css
tests/: README.md  conftest.py  test_all.sh  test_api.py  test_helper.py  test_internal_labels.py
versions/: index.html
