[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "credigraph"
version = "0.1.4"
description = "Python client for the CrediGraph API"
authors = [{name = "Complex Data Lab"}]
requires-python = ">=3.10"
dependencies = [
    "build>=1.4.0",
    "pytest>=9.0.2",
    "requests",
    "requests-mock>=1.12.1",
    "tldextract>=5.3.1",
    "twine>=6.2.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "requests",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]

[tool.setuptools.packages.find]
include = ["credigraph*"]

[project.urls]
Homepage = "https://huggingface.co/spaces/credi-net/CrediNet"
