[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "credigraph"
version = "0.3.0"
description = "Python client for the CrediGraph API"
authors = [{name = "Complex Data Lab"}]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "tldextract>=5.3.1",
    "pandas>=2.0.0",
    "docker>=7.1.0",
    "schemathesis>=4.10.2",
    "bump2version>=1.0.1",
    "build>=1.4.0",
    "twine>=6.2.0",
    "duckdb>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "requests-mock>=1.12.1",
    "build>=1.4.0",
    "twine>=6.2.0",
]
scripts = [
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]

[tool.setuptools.packages.find]
include = ["credigraph*"]

[project.urls]
Homepage = "https://huggingface.co/spaces/credi-net/CrediNet"
