[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "credigraph"
version = "0.4.1"
description = "Python client for the CrediGraph API"
readme = "README.md"
authors = [{name = "Complex Data Lab"}]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "tldextract>=5.3.1",
    "pandas>=2.0.0",
    "docker>=7.1.0",
    "schemathesis>=4.10.2",
    "bump2version>=1.0.1",
    "mkdocs-material>=9.7.6",
    "duckdb>=1.5.0",
    "fastapi>=0.135.1",
    "huggingface-hub>=1.7.2",
    "build>=1.4.0",
    "twine>=6.2.0",
    "uvicorn>=0.42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "requests-mock>=1.12.1",
    "build>=1.4.0",
    "twine>=6.2.0",
]
scripts = [
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]

[tool.setuptools.packages.find]
include = ["credigraph*"]

[project.urls]
Homepage = "https://huggingface.co/spaces/credi-net/CrediNet"

[tool.pytest.ini_options]
markers = [
    "integration: tests that call the live API",
]
